--- a/ibero-dci3-galeria-iconos-master/index.html
+++ b/ibero-dci3-galeria-iconos-master/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="input_wrapper">
       <input class="input" type="text" id="icon_input" />
-      <button class="input_button">Add</button>
+      <button class="input_button" onclick="validarTodo()">Add</button>
     </div>
     <ul class="icons_list" id="icons_list">
       <li class="icon_container" onclick="mostrarIconoPrincipal('fa-laugh-beam')">
@@ -27,6 +27,8 @@
         <i class="icon fas fa-laugh-beam"></i>
         <div class="label">fa-laugh-beam</div>
       </li>
+    
+      
     </ul>
   </div>
   <script src="./script.js"></script>
